--- a/app/src/main/res/layout/activity_logged.xml
+++ b/app/src/main/res/layout/activity_logged.xml
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="20dp"
         android:src="@drawable/vantea_logo"
-        android:id="@+id/logo"
+        android:id="@+id/logo2"
         />
 
     <androidx.cardview.widget.CardView
@@ -44,6 +44,7 @@
         android:layout_marginTop="20dp"
         android:text="Clicca sul QR per registrare il dispositivo"
         android:textSize="20dp"
+        android:textAlignment="center"
         android:textStyle="bold"
         />
 
