--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         android:textColor="@color/black"
         android:textFontWeight="900"
         android:id="@+id/labelStart"
+        android:textAlignment="center"
         />
 
     <TextView
@@ -83,7 +84,7 @@
         app:layout_constraintStart_toEndOf="@id/number_1"
         app:cardCornerRadius="50dp"
         app:layout_constraintTop_toBottomOf="@id/numberPassword"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/number_2"
         >
         <TextView
@@ -321,4 +322,47 @@
         android:textSize="20dp"
         android:id="@+id/bottone"
     />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/bottone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:cardElevation="8dp"
+        android:id="@+id/touchid"
+        android:layout_marginTop="30dp"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/fingerprint"
+                android:id="@+id/impronta"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingRight="10dp"
+                app:layout_constraintStart_toEndOf="@id/testoimpronta"
+
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Accedi con l'impronta "
+                android:padding="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/impronta"
+                app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/testoimpronta"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
