--- a/app/src/main/res/xml/resource.xml
+++ b/app/src/main/res/xml/resource.xml
@@ -3,5 +3,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.0.106</domain>
         <domain includeSubdomains="true">mioproxy.com</domain>
+        <domain includeSubdomains="true">openam.docker.com</domain>
     </domain-config>
 </network-security-config>
