--- a/app/src/main/res/layout/activity_server_connection.xml
+++ b/app/src/main/res/layout/activity_server_connection.xml
@@ -16,4 +16,42 @@
         android:id="@+id/progress"
         />
 
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/checkImage"
+        android:src="@drawable/check"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/messaggioAvvenuto"
+        app:layout_constraintTop_toBottomOf="@+id/checkImage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="18dp"
+        android:text="L'autenticazione è avvenuta con successo!\n\nPotrebbe volerci ancora qualche secondo\nper il cambio di pagina su OpenAM"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Torna alla hone"
+        android:backgroundTint="@color/black"
+        android:layout_marginBottom="20dp"
+        android:id="@+id/backhome"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
